# katip-sync-handle

./: LICENSE  katip-sync-handle.cabal
src/Katip/Scribes/: SyncHandle.hs
src/Katip/Scribes/SyncHandle/: FileOwner.hs
