cabal-version:      2.4
name:               katip-sync-handle
version:            0.1
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Alexei Uimanov
maintainer:         s9gf4ult@gmail.com

copyright:          Antorica LLC
category:           System

library
    exposed-modules:  Katip.Scribes.SyncHandle
                      Katip.Scribes.SyncHandle.FileOwner
    build-depends:    base >=4.12 && < 5,
                      aeson >=1.4 && < 1.6,
		      async,
                      auto-update >= 0.1 && < 0.2,
                      bytestring,
                      deepseq,
                      katip >= 0.8 && < 0.9,
                      scientific,
                      stm,
		      text,
		      unordered-containers >= 0.2 && < 0.3
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
